# daily_stock_analysis

./: .env.example  .env.example.ko  .gitignore  AGENTS.md  README.md  docker-up.sh  main.py  pyproject.toml  requirements.txt
.github/: requirements-ci.txt
.github/workflows/: 00-daily-analysis.yml  ci.yml  docker-publish.yml  network-smoke.yml
.kilo/: kilo.json
.kilo/plans/: 1782528440086-korean-i18n-support.md  1782560759682-ko-i18n-build-fix.md  1782563167290-ui-language-selectbox.md  1782570145746-korean-report-language-gaps-fix.md  1782599984485-docker-port-conflict-fix.md  1782601907222-uv-local-dev-setup.md  1782738143402-telegram-korean-language.md
bot/commands/: market.py
data_provider/: base.py  longbridge_fetcher.py
docker/: Dockerfile  docker-compose.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  INDEX.md  INDEX_EN.md  README_CHT.md  README_EN.md  README_KO.md  deploy-webui-cloud.md  full-guide.md  full-guide_EN.md  local-development.md  market-support.md  settings-help.md
plans/: korean-i18n-hardcoded-fixes.md  kr-stock-name-localization.md
scripts/: generate_index_from_csv.py  pip-install-requirements.sh
scripts/stock_index_seeds/: stock_list_kr.csv
src/: analyzer.py  config.py  daily_market_context_guardrail.py  market_analyzer.py  market_context.py  market_phase_prompt.py  market_phase_summary.py  notification.py  phase_decision_guardrail.py  report_language.py
src/core/: config_registry.py  market_review.py  pipeline.py
tests/: test_analyzer_news_prompt.py  test_bot_market_command.py  test_data_fetcher_prefetch_stock_names.py  test_docker_entrypoint.py  test_env_example_ko.py  test_generate_index_from_csv.py  test_longbridge_fetcher.py  test_market_analyzer_generate_text.py  test_market_phase_summary.py  test_notification.py  test_portfolio_api.py  test_report_language.py  test_stock_index_loader.py
(+71 files in other folders)
